--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Linting:
+  Linting_Backend:
     strategy:
       matrix:
         python-version: [3.11]
@@ -22,10 +22,33 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - run: |
+      - name: Install dependencies (Backend)
+        run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           if [ -f dev_requirements.txt ]; then pip install -r dev_requirements.txt; fi
-      - name: Linting
+      - name: Linting (Backend)
         run: |
           pylint -f colorized analysis database ingestion
+
+  Linting_Frontend:
+    strategy:
+      matrix:
+        node-version: [19.0.1]
+      fail-fast: false
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          check-latest: true
+      - name: Install dependencies (Frontend)
+        run: |
+          npm install
+      - name: Linting (Frontend)
+        run: |
+          npm run lint
