--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -19,14 +19,14 @@ spec:
           service:
             name: db-server-service
             port:
+              number: 5000
+  - host: stocksalot.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend-service
+            port:
               number: 80
-  # - host: stocksalot.com
-  #   http:
-  #     paths:
-  #     - path: /
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: frontend-service
-  #           port:
-  #             number: 80
