Converted RabbitMQ Service type to ClusterIP to prevent external access.

--- a/k8s/rabbitmq.yml
+++ b/k8s/rabbitmq.yml
@@ -52,7 +52,7 @@ metadata:
 spec:
   selector:
     app: rabbitmq
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - name: internal
       protocol: TCP
