--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,5 +37,9 @@
         "vite": "^4.4.2",
         "vitest": "^0.34.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "redis": "^4.6.8",
+        "winston": "^3.10.0"
+    }
 }
