--- a/k8s/ingestion.yml
+++ b/k8s/ingestion.yml
@@ -7,6 +7,8 @@ metadata:
     version: a
 spec:
   schedule: "0 */2 * * *"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
@@ -42,6 +44,13 @@ spec:
                   secretKeyRef:
                     name: ingestion-secrets
                     key: FINNHUB_API_KEY
+            resources:
+              limits:
+                cpu: "0.5"
+                memory: "512Mi"
+              requests:
+                cpu: "0.25"
+                memory: "256Mi"
           restartPolicy: Never
   concurrencyPolicy: Forbid
 
@@ -56,6 +65,8 @@ metadata:
     version: b
 spec:
   schedule: "0 1/2 * * *"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
@@ -91,5 +102,12 @@ spec:
                   secretKeyRef:
                     name: ingestion-secrets
                     key: FINNHUB_API_KEY
+            resources:
+              limits:
+                cpu: "0.5"
+                memory: "512Mi"
+              requests:
+                cpu: "0.25"
+                memory: "256Mi"
           restartPolicy: Never
   concurrencyPolicy: Forbid
