--- a/k8s/redis.yml
+++ b/k8s/redis.yml
@@ -72,6 +72,8 @@ metadata:
   name: curl-frontend-cronjob
 spec:
   schedule: "10 */1 * * *"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
@@ -80,5 +82,12 @@ spec:
           - name: curl-frontend
             image: curlimages/curl
             command: ["curl", "frontend-service"]
-          restartPolicy: OnFailure
+            resources:
+              limits:
+                cpu: "0.5"
+                memory: "512Mi"
+              requests:
+                cpu: "0.25"
+                memory: "256Mi"
+          restartPolicy: Never
   concurrencyPolicy: Forbid
