--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,40 +2,51 @@
 name: Build
 
 on:
-  workflow_call:
-  workflow_dispatch:
+    workflow_call:
+    workflow_dispatch:
+    pull_request:
+        branches:
+            - main
+        paths-ignore:
+            - "README.md"
+            - "assets/**"
+
+permissions:
+    id-token: write
+    contents: read
+    packages: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - microservice: ./database
-            image: ghcr.io/hyperclaw79/stocksalot-db-server
-          - microservice: ./ingestion
-            image: ghcr.io/hyperclaw79/stocksalot-ingestion
-          - microservice: ./frontend
-            image: ghcr.io/hyperclaw79/stocksalot-frontend
-    steps:
-      - name : Checkout
-        uses: actions/checkout@v3
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                include:
+                    - microservice: ./database
+                      image: ghcr.io/hyperclaw79/stocksalot-db-server
+                    - microservice: ./ingestion
+                      image: ghcr.io/hyperclaw79/stocksalot-ingestion
+                    - microservice: ./frontend
+                      image: ghcr.io/hyperclaw79/stocksalot-frontend
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v2
 
-      - name: Login to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+            - name: Login to GHCR
+              uses: docker/login-action@v2
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker Images
-        uses: docker/build-push-action@v4
-        with:
-          context: ${{ matrix.microservice }}
-          push: true
-          tags: |
-            ${{ matrix.image }}
-            ${{ matrix.image }}:latest
+            - name: Build Docker Images
+              uses: docker/build-push-action@v4
+              with:
+                  context: ${{ matrix.microservice }}
+                  push: ${{ github.event_name != 'pull_request' }}
+                  tags: |
+                      ${{ matrix.image }}
+                      ${{ matrix.image }}:latest
