Fixed microservices not using the latest builds.

--- a/k8s/database.yml
+++ b/k8s/database.yml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: database
         image: postgres:latest
-        imagePullPolicy: "IfNotPresent"
+        imagePullPolicy: "Always"
         envFrom:
           - secretRef:
               name: db-secrets
