--- a/k8s/ingestion.yml
+++ b/k8s/ingestion.yml
@@ -18,7 +18,7 @@ spec:
           containers:
           - name: ingestion
             image: "ghcr.io/hyperclaw79/stocksalot-ingestion:latest"
-            imagePullPolicy: "IfNotPresent"
+            imagePullPolicy: "Always"
             env:
               - name: DB_SERVER_HOST
                 value: "db-server-service"
@@ -76,7 +76,7 @@ spec:
           containers:
           - name: ingestion
             image: "ghcr.io/hyperclaw79/stocksalot-ingestion:latest"
-            imagePullPolicy: "IfNotPresent"
+            imagePullPolicy: "Always"
             env:
               - name: DB_SERVER_HOST
                 value: "db-server-service"
