Fixed Frontend Linter not getting triggered.

--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -9,6 +9,8 @@ on:
         paths-ignore:
             - "README.md"
             - "assets/**"
+            - ".github/**"
+            - "!.github/workflows/build.yml"
 
 permissions:
     id-token: write
