--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -7,10 +7,14 @@ on:
         branches:
             - main
         paths-ignore:
-            - "README.md"
             - "assets/**"
             - ".github/**"
             - "!.github/workflows/build.yml"
+            - "README.md"
+            - "CODE_OF_CONDUCT.md"
+            - "CONTRIBUTING.md"
+            - "LICENSE"
+            - "SECURITY.md"
 
 permissions:
     id-token: write
