Perform rollout for cloud deploy

--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -100,3 +100,4 @@ jobs:
             - name: Apply Kubernetes Manifests
               run: |
                   kubectl apply -f k8s
+                  kubectl rollout restart deploy
