Added subpath to database volumemount to prevent GKE conflict.

--- a/k8s/database.yml
+++ b/k8s/database.yml
@@ -38,6 +38,7 @@ spec:
         volumeMounts:
           - name: postgres-data
             mountPath: /var/lib/postgresql/data
+            subPath: postgres
           - name: init-script
             mountPath: /docker-entrypoint-initdb.d
         resources:
