--- a/k8s/db-server.yml
+++ b/k8s/db-server.yml
@@ -53,11 +53,13 @@ spec:
           - containerPort: 5000
         resources:
           limits:
-            cpu: "0.5"
+            cpu: "250m"
             memory: "512Mi"
+            ephemeral-storage: "100Mi"
           requests:
-            cpu: "0.25"
-            memory: "256Mi"
+            cpu: "250m"
+            memory: "512Mi"
+            ephemeral-storage: "100Mi"
 
 ---
 
