--- a/k8s/ingestion.yml
+++ b/k8s/ingestion.yml
@@ -46,11 +46,13 @@ spec:
                     key: FINNHUB_API_KEY
             resources:
               limits:
-                cpu: "0.5"
+                cpu: "250m"
                 memory: "512Mi"
+                ephemeral-storage: "100Mi"
               requests:
-                cpu: "0.25"
-                memory: "256Mi"
+                cpu: "250m"
+                memory: "512Mi"
+                ephemeral-storage: "100Mi"
           restartPolicy: Never
   concurrencyPolicy: Forbid
 
@@ -104,10 +106,12 @@ spec:
                     key: FINNHUB_API_KEY
             resources:
               limits:
-                cpu: "0.5"
+                cpu: "250m"
                 memory: "512Mi"
+                ephemeral-storage: "100Mi"
               requests:
-                cpu: "0.25"
-                memory: "256Mi"
+                cpu: "250m"
+                memory: "512Mi"
+                ephemeral-storage: "100Mi"
           restartPolicy: Never
   concurrencyPolicy: Forbid
