--- a/k8s/rabbitmq.yml
+++ b/k8s/rabbitmq.yml
@@ -33,11 +33,13 @@ spec:
             mountPath: /var/lib/rabbitmq/
         resources:
           limits:
-            cpu: "0.5"
+            cpu: "250m"
             memory: "512Mi"
+            ephemeral-storage: "200Mi"
           requests:
-            cpu: "0.25"
-            memory: "256Mi"
+            cpu: "250m"
+            memory: "512Mi"
+            ephemeral-storage: "200Mi"
       volumes:
         - name: rabbitmq-data
           persistentVolumeClaim:
@@ -68,7 +70,7 @@ metadata:
 spec:
   resources:
     requests:
-      storage: 100Mi
+      storage: 256Mi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
