Reduced cache warmer schedule to 30mins.

--- a/k8s/redis.yml
+++ b/k8s/redis.yml
@@ -73,7 +73,7 @@ kind: CronJob
 metadata:
   name: curl-frontend-cronjob
 spec:
-  schedule: "0 */1 * * *"
+  schedule: "0/30 * * * *"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   jobTemplate:
