Display only changed configs in Cloud Deploy

--- a/.github/workflows/cloud-deploy.yml
+++ b/.github/workflows/cloud-deploy.yml
@@ -104,5 +104,5 @@ jobs:
 
             - name: Apply Kubernetes Manifests
               run: |
-                  kubectl apply -f k8s
+                  kubectl apply -f k8s | grep -v unchanged
                   kubectl rollout restart deploy
